--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.1",
+    "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.1",
     "@tailwindcss/vite": "^4.0.0",
     "bootstrap": "^5.3.3",
