--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "@tailwindcss/vite": "^4.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-select": "^1.13.18",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
-    "react-quill": "^2.0.0"
+    "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^7.1.5",
+    "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
