--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-select": "^1.13.18",
     "date-fns": "^4.1.0",
+    "firebase": "^11.3.0",
     "framer-motion": "^12.4.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
