--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.3.0",
     "framer-motion": "^12.4.0",
+    "highlight.js": "^11.11.1",
+    "prismjs": "^1.29.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
+    "react-highlight": "^0.15.0",
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.5",
+    "react-syntax-highlighter": "^15.6.1",
     "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
